k8/5-service.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-itwasum
  namespace: itwasum
spec:
  selector:
    app: itwasum
  ports:
  - port: 8080
    targetPort: 8081
